<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MovieDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/description_movie_poster"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic[11]" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/img_poster"
            android:alpha="0.7"
            android:background="@android:color/black"
            android:gravity="bottom">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:padding="8dp"
                android:text="@string/example_original_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/img_poster">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_rate_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="16dp"
                    android:gravity="end"
                    android:text="@string/heading_vote_average"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_rate_desc"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:gravity="end"
                    android:text="@string/example_vote_average"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


                <TextView
                    android:id="@+id/tv_release_date_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/heading_release_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_release_date_desc"
                    android:layout_marginStart="16dp"
                    android:text="@string/example_release_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <View
                    android:id="@+id/view_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/tv_release_date"
                    android:layout_margin="10dp"
                    android:background="@android:color/black" />

                <TextView
                    android:id="@+id/tv_content_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/view_divider"
                    android:layout_marginStart="16dp"
                    android:text="@string/movie_details"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_content_desc"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/example_overview"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </RelativeLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/img_btn_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/navigation_back"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back" />
    </RelativeLayout>
</ScrollView>